<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:text="@string/btn_permissions"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/perm_overlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_overlay" />

    <Button
        android:id="@+id/perm_a11y"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_a11y" />

    <Button
        android:id="@+id/perm_notif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_notif" />
</LinearLayout>
